--- a/GraphicsViewTests/cMainWindow.ui
+++ b/GraphicsViewTests/cMainWindow.ui
@@ -134,18 +134,25 @@
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
+         <layout class="QGridLayout" name="gridLayout">
+          <item row="0" column="0">
            <widget class="QPushButton" name="buttonToolPaint">
             <property name="text">
              <string>Paint</string>
             </property>
            </widget>
           </item>
-          <item>
+          <item row="0" column="1">
            <widget class="QPushButton" name="buttonToolSelect">
             <property name="text">
              <string>Select</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="buttonRectangle">
+            <property name="text">
+             <string>Rectangle</string>
             </property>
            </widget>
           </item>
