--- a/GraphicsViewTests/cMainWindow.ui
+++ b/GraphicsViewTests/cMainWindow.ui
@@ -111,6 +111,20 @@
             </property>
            </widget>
           </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="opacityLabel">
+            <property name="text">
+             <string>Opacity</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QSpinBox" name="opacitySpinBox">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
