--- a/GraphicsViewTests/cMainWindow.ui
+++ b/GraphicsViewTests/cMainWindow.ui
@@ -170,6 +170,13 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="1">
+           <widget class="QPushButton" name="buttonSmudge">
+            <property name="text">
+             <string>Smudge</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
