--- a/GraphicsViewTests/cMainWindow.ui
+++ b/GraphicsViewTests/cMainWindow.ui
@@ -125,6 +125,16 @@
             </property>
            </widget>
           </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="vectorialLabel">
+            <property name="text">
+             <string>Vectorial</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QCheckBox" name="vectorialCB"/>
+          </item>
          </layout>
         </item>
         <item>
