--- a/GraphicsViewTests/cMainWindow.ui
+++ b/GraphicsViewTests/cMainWindow.ui
@@ -159,10 +159,24 @@
         </item>
         <item>
          <layout class="QGridLayout" name="gridLayout">
+          <item row="2" column="1">
+           <widget class="QPushButton" name="buttonSmudge">
+            <property name="text">
+             <string>Smudge</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QPushButton" name="buttonToolPaint">
             <property name="text">
-             <string>Paint</string>
+             <string>Pencil</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QPushButton" name="buttonRectangle">
+            <property name="text">
+             <string>Rectangle</string>
             </property>
            </widget>
           </item>
@@ -174,16 +188,9 @@
            </widget>
           </item>
           <item row="1" column="0">
-           <widget class="QPushButton" name="buttonRectangle">
+           <widget class="QPushButton" name="buttonToolPencil">
             <property name="text">
-             <string>Rectangle</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QPushButton" name="buttonSmudge">
-            <property name="text">
-             <string>Smudge</string>
+             <string>Pen</string>
             </property>
            </widget>
           </item>
